--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,6 +6,11 @@
     flex-direction: column;
     align-items: center;
     background: @wild-sand;
+    position: fixed;
+    top: 0;
+    overflow: hidden;
+    opacity: 90%;
+    
 
         h1 {
             font-size: 3rem;
@@ -26,7 +31,10 @@
             justify-content: space-around;
             font-size: 1.3rem;
             color: @river-bend;
-
+            
+            &:hover {
+                color: @border-real;
+            }
         }
 
         @media @phone {
@@ -62,4 +70,5 @@
             color: @btnBck;
         }
     }
+
 }
